fix: per ticket alignment

--- a/src/blocks/_tickets.scss
+++ b/src/blocks/_tickets.scss
@@ -63,6 +63,7 @@ tr[class^="tix-row"] td {
     text-align: left;
   }
 
+  &-per-ticket,
   &-price,
   &-quantity,
   &-remaining {
